style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3788 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_fees_structure.html.erb
+++ b/app/views/finance/_fees_structure.html.erb
@@ -58,7 +58,7 @@
       <tr class="tr-blank"></tr>
       <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
         <td class="col-1"></td>
-        <td class="col-1" colspan="2" ><span><%= t('discount') %></span></td>
+        <td class="col-1" colspan="2" ><span class="themed_text"><%= t('discount') %></span></td>
       </tr>
       <% @batch_discounts.each do |d| %>
         <tr class="tr-<%= cycle("odd","even") %>">
