--- a/app/views/finance/view_employee_payslip.html.erb
+++ b/app/views/finance/view_employee_payslip.html.erb
@@ -34,7 +34,7 @@
   </div>
   <ul class="item-list">
     <li class="heading"><%= @monthly_payslips.first.active_or_archived_employee.full_name %></li>
-    <li class="heading"><%= t('payslip_generated_on') %> <%= params[:salary_date] %> <span class="red">(<%= t('status') %>: <%=  @monthly_payslips.first.status_as_text %>)</span></li>
+    <li class="heading"><%= t('payslip_generated_on') %> <%= params[:salary_date] %> <span class="themed_text">(<%= t('status') %>: <%=  @monthly_payslips.first.status_as_text %>)</span></li>
   </ul>
   <ul class="item-list">
     <li class="heading1"><%= t('earnings') %></li>
