style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3792 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/electives.html.erb
+++ b/app/views/student/electives.html.erb
@@ -32,9 +32,9 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
-  <div class="name"><%= t('batch') %></div><div class="val"><span>:</span><%= @batch.name %></div>
-  <div class="name"><%=t('elective_group') %></div><div class="val"><span>:</span><%= @elective_group.name %></div>
-  <div class="name"><%= t('subject') %></div><div class="val"><span>:</span><%= @elective_subject.name %></div>
+  <div class="name"><%= t('batch') %></div><div class="val themed_text"><span>:</span><%= @batch.name %></div>
+  <div class="name"><%=t('elective_group') %></div><div class="val themed_text"><span>:</span><%= @elective_group.name %></div>
+  <div class="name"><%= t('subject') %></div><div class="val themed_text"><span>:</span><%= @elective_subject.name %></div>
   <br />
   <ul id="category-list">
     <div class="linker">
