fixed bug in changing fee particular from student category to All students  [fixed #3599]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3795 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_master_category_particulars_edit_form.html.erb
+++ b/app/views/finance/_master_category_particulars_edit_form.html.erb
@@ -59,7 +59,7 @@
 
 
     <div id="student">
-      <%= render :partial => 'student_category_particulars', :lacals=>{ :student_categories=> @student_categories} unless @finance_fee_particular.student_category_id.nil? %>
+      <%= render :partial => 'student_category_particulars', :locals=>{ :student_categories=> @student_categories} unless @finance_fee_particular.student_category_id.nil? %>
     </div>
 
     <div class="label-field-pair">
