--- a/app/views/class_designations/_class_designations.html.erb
+++ b/app/views/class_designations/_class_designations.html.erb
@@ -21,17 +21,16 @@
   <% unless @class_designations.empty? %>
     <li class="heading"><%= t('class_designations_text') %></li>
     <% @class_designations.each  do |designation| %>
-        <li class="list<%=cycle('odd', 'even')%>">
-          <div class="category-name"><%= designation.name %></div>
-          <% if Configuration.find_by_config_key("GPA").config_value=="1" %>
+      <li class="list<%=cycle('odd', 'even')%>">
+        <div class="category-name"><%= designation.name %></div>
+        <% if @course.gpa_enabled? %>
           <div class="category-marks"><%= designation.cgpa %></div>
-          <% end %>
-          <% if Configuration.find_by_config_key("CWA").config_value=="1" %>
+        <% else %>
           <div class="category-marks"><%= designation.marks %></div>
-          <% end %>
-          <div class="category-edit"><%= link_to_remote "#{t('edit_text')}", :url=>{:controller=>"class_designations",:action=>"edit_class_designation", :id=>designation.id}  if permitted_to? :edit_class_designation, :class_designations %></div><div class="category-delete">   <%= link_to_remote "Delete", :url=>{:controller=>"class_designations",:action=>"delete_class_designation", :id=>designation.id}, :confirm=>"Are you sure?" if permitted_to? :delete_class_designation, :class_designations %></div>
-        </li>
-      <% end %>
+        <% end %>
+        <div class="category-edit"><%= link_to_remote "#{t('edit_text')}", :url=>{:controller=>"class_designations",:action=>"edit_class_designation", :id=>designation.id}  if permitted_to? :edit_class_designation, :class_designations %></div><div class="category-delete">   <%= link_to_remote "Delete", :url=>{:controller=>"class_designations",:action=>"delete_class_designation", :id=>designation.id}, :confirm=>"Are you sure?" if permitted_to? :delete_class_designation, :class_designations %></div>
+      </li>
+    <% end %>
   <% else %>
     <p class="flash-msg"><%= t('no_class_designations_found') %>.</p>
   <% end %>
