style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3797 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/news/add.css
+++ b/public/stylesheets/news/add.css
@@ -66,11 +66,15 @@
     cursor:pointer;
 }
 .news_publish_button:hover{
-   background:  #373B3F;
+    background:  #373B3F;
 }
 .fieldWithErrors {
     height: 42px;
     width: 648px;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
+}
+#page-yield #news_title:focus {
+    background: none !important;
+    border: none !important;
 }
