style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3799 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/user/profile.css
+++ b/public/stylesheets/rtl/user/profile.css
@@ -68,7 +68,7 @@ a.user_button{
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin:30px auto;
+    margin:0 auto;
     margin-left:20px;
     padding:7px 12px;
     border:none;
