style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3804 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="submit_div">
-          <%= link_to "► #{t('delete_text')}", { :controller => "user", :action => "delete", :id => @user.username}, :class => "user_button", :confirm=>"#{t('are_you_sure_to_delete_user')}", :class => "user_submit_button1" %>
+          <%= link_to "► #{t('delete_text')}", { :controller => "user", :action => "delete", :id => @user.username}, :class => "user_button", :confirm=>"#{t('are_you_sure_to_delete_user')}" %>
         </div>
     <%#= submit_tag "", :value => "► #{t('update')}", :class => "user_submit_button" %>
       <% end  %>
