--- a/public/stylesheets/rtl/user/edit.css
+++ b/public/stylesheets/rtl/user/edit.css
@@ -40,25 +40,9 @@
 }
 
 
-.user_submit_button {
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    margin:30px auto;
-    margin-right: 150px;
-    padding:7px 12px;
-    border:none;
-    text-align:center;
-    text-decoration: none;
-    width:auto;
-    cursor:pointer;
-}
-.user_submit_button:hover{
-    background: #373B3F;
+.user_button {
+    margin-right: 210px;
+    margin-top: 0;
 }
 .necessary-field {
     color : #f00;
