--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -18,8 +18,10 @@
 #under the License. -%>
 
 <div id="tooltip_box">
-  <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader",:style =>"display: none; float:left;" ) %>
-  <div id="tooltip_header">    
+  <div class="image_loading">
+    <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader",:style =>"display: none; float:left;" ) %>
+  </div>
+  <div id="tooltip_header">
   </div>
 </div>
 <div id="calendar" >
