--- a/public/stylesheets/employee/edit_rejected_payslip.css
+++ b/public/stylesheets/employee/edit_rejected_payslip.css
@@ -1,241 +1,217 @@
 .payslip-field-pair {
-    float : left;
-    min-height : 40px;
-    width : 470px;
-    margin:0 0 0 0px;
+float : left;
+min-height : 40px;
+width : 470px;
+margin:0 0 0 0px;
 }
 .payslip-input-bg {
-    height : 28px;
-    width : 200px;
-    float:right;
+height : 28px;
+width : 200px;
+float:right;
 }
-
 .payslip-field-pair label {
-    color : #444;
-    display : block;
-    font-weight : bold;
-    margin : 5px 0 0 0;
-    float:left;
-    max-width: 250px;
-    font-size:14px;
+color : #444;
+display : block;
+font-weight : bold;
+margin : 5px 0 0 0;
+float:left;
+max-width: 250px;
+font-size:14px;
 }
 .payslip-field-pair input {
-    background : #eee;
-    border : 1px solid #c6c6c6;
-    margin : 5px 0 0 10px;
-    width : 150px;
-    height:17px;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    padding: 5px;
+background : #eee;
+border : 1px solid #c6c6c6;
+margin : 5px 0 0 10px;
+width : 150px;
+height:17px;
+-moz-border-radius:10px;
+-webkit-border-radius:10px;
+padding: 5px;
 }
 .payslip-field-pair input:focus {
-    background: #fff;
-    border: 1px solid #9e0f15;
+background: #fff;
+border: 1px solid #9e0f15;
 }
 .payslip-field-pair-extra {
-    float : left;
-    height : 40px;
-    width : 370px;
-    margin:0 0 0 0px;
+float : left;
+height : 40px;
+width : 370px;
+margin:0 0 0 0px;
 }
-
 .payslip-field-pair-extra label {
-    color : #444;
-    display : block;
-    font-weight : bold;
-    margin : 5px 0 0 0;
-    float:left;
+color : #444;
+display : block;
+font-weight : bold;
+margin : 5px 0 0 0;
+float:left;
 }
 .payslip-field-pair-extra input {
-    background : transparent;
-    border : 0;
-    margin : 5px 0 0 10px;
-    width : 135px;
+background : transparent;
+border : 0;
+margin : 5px 0 0 10px;
+width : 135px;
 }
 #submit-button input{
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B none repeat scroll 0 0;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    margin-left:281px;
-    margin-top:30px;
-    padding:7px 10px;
-    border:none;
-    cursor:pointer;
-}
-#submit-button input:hover{
-    background: #373B3F;
-}
-a.user_button{
-    margin-top: 0 !important;
+-moz-border-radius:10px;
+-webkit-border-radius:10px;
+background:#27292B none repeat scroll 0 0;
+color:#FFFFFF;
+font-family:arial;
+font-size:14px;
+font-weight:bold;
+margin-left:281px;
+margin-top:30px;
+padding:7px 10px;
+border:none;
+cursor:pointer;
 }
 #form-content{
-    width:500px;
-    float:left
+width:500px;
+float:left
 }
-
 #add-payslip-category-link{
-    padding-left:80px;
+padding-left:80px;
 }
-
 #add-payslip-category-link a{
-    color:#000;
+color:#000;
 }
-
 #individual-payslip-categories{
-    float:left;
-    width:400px;
+float:left;
+width:400px;
 }
-
-
 #new-payslip-category-list {
-    clear : both;
-    padding :0px;
-    margin:0px;
+clear : both;
+padding :0px;
+margin:0px;
 }
-
 #new-payslip-category-list li {
-    background : #fff url(../../images/_global/list-bg-repeat.jpg) repeat;
-    color : #444;
-    height : 1.5em; width :290px;
-    list-style-type : none;
-    padding :0px;
+background : #fff url(../../images/_global/list-bg-repeat.jpg) repeat;
+color : #444;
+height : 1.5em; width :290px;
+list-style-type : none;
+padding :0px;
 }
-
 #new-payslip-category-list li.heading {
-    background : none;
-    font-weight : bold;
+background : none;
+font-weight : bold;
 }
 #new-payslip-category-list li div {
-    float : left;
+float : left;
 }
 #new-payslip-category-list li div.category-name {
-    width : 230px;
+width : 230px;
 }
 #new-payslip-category-list li div.category-edit,
 #new-payslip-category-list li div.category-delete {
-    font-size : 0.9em;
-    width : 50px;
+font-size : 0.9em;
+width : 50px;
 }
 #new-payslip-category-list li div a {
-    color : #000;
+color : #000;
 }
-
 .new-category-field-pair {
-    height : 80px;
-    width : 250px;
-    margin-left:30px;
+height : 80px;
+width : 250px;
+margin-left:30px;
 }
-
 .new-category-field-pair label {
-    color : #444;
-    display : block;
-    font-weight : bold;
-    margin : 0 0 10px 0;
+color : #444;
+display : block;
+font-weight : bold;
+margin : 0 0 10px 0;
 }
 .new-category-field-pair input {
-    background : #eee;
-    border : 1px solid #c6c6c6;
-    margin : 5px 0 0 10px;
-    width : 205px;
-    height:17px;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    padding: 5px;
+background : #eee;
+border : 1px solid #c6c6c6;
+margin : 5px 0 0 10px;
+width : 205px;
+height:17px;
+-moz-border-radius:10px;
+-webkit-border-radius:10px;
+padding: 5px;
 }
 .new-category-field-pair input:focus{
-    background: #fff;
-    border: 1px solid #9e0f15;
+background: #fff;
+border: 1px solid #9e0f15;
 }
-
 .new-category-checkbox-pair{
-    width:250px;
-    margin-left:30px;
+width:250px;
+margin-left:30px;
 }
-
 #new-category-submit-button input{
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B none repeat scroll 0 0;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    margin-left:70px;
-    margin-top:30px;
-    padding:7px 10px;
-    border:none;
-    cursor:pointer;
+-moz-border-radius:10px;
+-webkit-border-radius:10px;
+background:#27292B none repeat scroll 0 0;
+color:#FFFFFF;
+font-family:arial;
+font-size:14px;
+font-weight:bold;
+margin-left:70px;
+margin-top:30px;
+padding:7px 10px;
+border:none;
+cursor:pointer;
 }
-
 .category-remove{
-    width:15px;
-    float:right;
-    margin:1px 0 0 15px;
+width:15px;
+float:right;
+margin:1px 0 0 15px;
 }
-
 .amount-data{
-    margin:4px 0 0 5px;
+margin:4px 0 0 5px;
 }
-
-
-
 .name{
-    color: #999999;
-    float: left;
-    width: 100px;
-    font-weight: bold;
-    font-size: 13px;
+color: #999999;
+float: left;
+width: 100px;
+font-weight: bold;
+font-size: 13px;
 }
-
 .val {
-    color: #bb0000;
-    font-weight: bold;
-    font-size: 13px;
-    float: left;
+color: #bb0000;
+font-weight: bold;
+font-size: 13px;
+float: left;
 }
-
 .val span{
-    margin-right:12px;
-    color: black;
+margin-right:12px;
+color: black;
 }
-
 .box{
-    width: 600px;
-    margin:0 auto;
+width: 600px;
+margin:0 auto;
 }
 ul{
-
 }
-
 .del-button {
-    float:left;
-    margin:0 0 0 5px;
-    width:10px;
+float:left;
+margin:0 0 0 20px;
+width:10px;
 }
-
-#add-payslip-category-link  a{
-    padding: 7px 10px;
-    color: #fff;
-    background: #27292B;
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    font-weight: bold;
-    font-size: 14px;
-    border:none;
-    font-family: arial;
-    cursor:pointer;
-    text-decoration: none;
+#add-payslip-category-link a{
+padding: 7px 10px;
+color: #fff;
+background: #27292B;
+-moz-border-radius:10px;
+-webkit-border-radius:10px;
+font-weight: bold;
+font-size: 14px;
+border:none;
+font-family: arial;
+cursor:pointer;
+text-decoration: none;
 }
-#add-payslip-category-link  a:hover{
-    background:  #373B3F;
+#add-payslip-category-link a:hover{
+background: #373B3F;
 }
-
-
 .new_category{
-    overflow: hidden;
+overflow: hidden;
+}
+ul.payslip_category_list
+{
+    list-style-type: none;
+}
+#is_deduction
+{
+    width: 15px;
 }
