style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3816 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/cce_reports/student_wise_report.css
+++ b/public/stylesheets/cce_reports/student_wise_report.css
@@ -39,9 +39,9 @@ li.student_names, li.student_names a{
     text-decoration: none;
     /*    font-weight: bold;*/
 }
-.active-link{
+.student_list a.active-link{
     font-weight: bold;
-    color: #C00 !important;
+    color: #C00;
 }
 .student-name{
     height: 28px;
