changed links under "archived" section in student/reports to point to grouped exam report [fixed #3619]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3819 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/_grouped_exam_report.erb
+++ b/app/views/exam/_grouped_exam_report.erb
@@ -93,7 +93,7 @@
             <%= exam_total.present? ? exam_total.marks : "-" %>
           </td>
         <% end %>
-        <% total_avg = GroupedExamReport.find_by_student_id_and_batch_id_and_score_type(@student.id,@student.batch.id,"c") %>
+        <% total_avg = GroupedExamReport.find_by_student_id_and_batch_id_and_score_type(@student.id,@batch.id,"c") %>
         <td class="col-3"><%= total_avg.present? ? total_avg.marks : "-" %></td>
       </tr>
     </table>
@@ -181,6 +181,11 @@
     <% end %>
   </div>
 <% end %>
+<% if @previous_batch == 1 %>
+<%= link_to " ► #{t('pdf_report')}",
+  { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button1' %>
+<% else %>
 <%= link_to " ► #{t('pdf_report')}",
   { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button' %>
+<% end %>
 <div class="extender"></div>
