style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3824 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_view_payslip.erb
+++ b/app/views/employee/_view_payslip.erb
@@ -98,11 +98,11 @@
   </div>
 <% end %>
 <% if @current_user==@emp.user %>
-  <div>
+  <div class="pdf-link">
     <%= link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank", :class=>"user_button" %>
   </div>
 <% elsif permitted_to?     :employee_individual_payslip_pdf,:employee %>
-  <div>
+  <div class="pdf-link">
     <%= link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"employee_individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank", :class=>"user_button" %>
   </div>
 <% end %>
