style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3825 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/delete.erb
+++ b/app/views/student/delete.erb
@@ -34,7 +34,7 @@
 
     <p class="warning">(<%= t('description2') %>)</p>
     <%= link_to "► #{t('delete_text')}",
-      { :action => 'destroy', :id => @student.id }, :class => 'delete-button', :confirm => "#{t('are_you_completely_sure')}" %>
+      { :action => 'destroy', :id => @student.id }, :class => 'user_button', :confirm => "#{t('are_you_completely_sure')}" %>
   </div>
 
 </div>
