--- a/public/stylesheets/rtl/student/delete.css
+++ b/public/stylesheets/rtl/student/delete.css
@@ -1,18 +1,3 @@
-.delete-button{
--moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B none repeat scroll 0 0;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    margin:0px auto;
-    margin-right:10px;
-    padding:7px 12px;
-    border:none;
-    text-align:center;
-    width:auto;
-    cursor:pointer;
-    float:right;
-    text-decoration:none;
+.user_button{
+    margin: 0 10px 0 0;
 }
