style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3828 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/payroll/manage_payroll.css
+++ b/public/stylesheets/rtl/payroll/manage_payroll.css
@@ -24,6 +24,10 @@
     font-weight: 600;
     font-weight: bold;
 }
+#page-yield .payroll-input-bg input:focus {
+    background: #EEE;
+    border: 1px solid #C6C6C6;
+}
 #submit-button input{
    -moz-border-radius:10px;
     -webkit-border-radius:10px;
