style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3829 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/payroll/manage_payroll.css
+++ b/public/stylesheets/payroll/manage_payroll.css
@@ -25,8 +25,8 @@
     font-weight: bold;
 }
 #page-yield .payroll-input-bg input:focus {
-    background: #EEE;
-    border: 1px solid #C6C6C6;
+    background: #EEE !important;
+    border: 1px solid #C6C6C6 !important;
 }
 #submit-button input{
     -moz-border-radius:10px;
