style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3830 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/payroll/manage_payroll.css
+++ b/public/stylesheets/rtl/payroll/manage_payroll.css
@@ -25,11 +25,11 @@
     font-weight: bold;
 }
 #page-yield .payroll-input-bg input:focus {
-    background: #EEE !important;
-    border: 1px solid #C6C6C6 !important;
+    background: #ffffff;
+    border: 1px solid #9E0F15;
 }
 #submit-button input{
-   -moz-border-radius:10px;
+    -moz-border-radius:10px;
     -webkit-border-radius:10px;
     background:#27292B none repeat scroll 0 0;
     color:#FFFFFF;
