--- a/public/stylesheets/payroll/manage_payroll.css
+++ b/public/stylesheets/payroll/manage_payroll.css
@@ -25,8 +25,8 @@
     font-weight: bold;
 }
 #page-yield .payroll-input-bg input:focus {
-    background: #EEE !important;
-    border: 1px solid #C6C6C6 !important;
+    background: #ffffff;
+    border: 1px solid #9E0F15;
 }
 #submit-button input{
     -moz-border-radius:10px;
